[package]
name = "example-mongo"
version = "0.0.0-develop"
authors = ["fg51 <zknsftk1msrk@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
mongodb = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.20.1", features = ["full"] }
